# ukrainian-handwriting-synth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  generate.py  pyproject.toml  run.sh
.github/workflows/: python.yml
src/ukr_synth/: __init__.py  augmentations.py  config.py  corpus.py  corpus_reader.py  fonts.py  generator.py  logger.py  renderer.py
