[project]
name = "ukr-synth-dataset"
version = "0.1.0"
description = "Synthetic handwritten text dataset generator. Designed for Ukrainian, extensible to any language."

authors = [
    {name = "Valerii Sielikhov", email = "valeriy.selikhovv@gmail.com"}
]
license = {text = "MIT"}
keywords = ["handwriting", "synthetic", "dataset", "ukrainian", "ocr", "text-generation"]

readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools",
    "pillow",
    "opencv-python",
    "numpy",
    "albumentations",
    "pandas",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ukr_synth"]
