[project]
name = "ukr-synth-dataset"
version = "0.1.0"
description = "Synthetic handwritten text dataset generator. Designed for Ukrainian, extensible to any language."

authors = [
    {name = "Valerii Sielikhov", email = "valeriy.selikhovv@gmail.com"}
]
license = {text = "MIT"}
keywords = ["handwriting", "synthetic", "dataset", "ukrainian", "ocr", "text-generation"]

readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools",
    "pillow",
    "opencv-python",
    "numpy",
    "albumentations",
    "pandas",
    "tqdm",
    "flake8",
    "flake8-pyproject",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ukr_synth"]

[tool.flake8]
max-line-length = 100
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "output",
    "images",
    "fonts",
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by max-line-length)
    "W503",  # line break before binary operator
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
]
