[project]
name = "ukr-synth-dataset"
version = "0.1.0"
description = "Synthetic handwritten text dataset generator. Designed for Ukrainian, extensible to any language."

authors = [
    {name = "Valerii Sielikhov", email = "valeriy.selikhovv@gmail.com"}
]
license = {text = "MIT"}
keywords = ["handwriting", "synthetic", "dataset", "ukrainian", "ocr", "text-generation"]

readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools",
    "pillow",
    "opencv-python",
    "numpy",
    "albumentations",
    "pandas",
    "tqdm",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ukr_synth"]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "output",
    "images",
    "fonts",
]

[tool.ruff.lint]
ignore = [
    "E501",   # line too long (handled by line-length)
    "PLR0913", # too many arguments
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
